Parser/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    VOID
    WITH
    IMPORT
    DEBUGGER
    EXTENDS
    THIS
    DELETE
    LCOMMENT
    SETPROP
    COLON
    GETP
    CASE
    TRY
    DEFAULT
    NEW
    SWITCH
    CATCH
    SETP
    INSTANCEOF
    GETPROP
    CONDOP
    DO
    CONST
    EXPORT
    CLASS
    REGEX
    YIELD
    FINALLY
    IN
    BCOMMENT
    ALERT
    SUPER
    THROW

Grammar

Rule 0     S' -> start
Rule 1     start -> block
Rule 2     start -> statements
Rule 3     start -> loop
Rule 4     block -> LEFTBRACE statements RIGHTBRACE
Rule 5     block -> LEFTBRACE RIGHTBRACE
Rule 6     loop -> forloop
Rule 7     statements -> statement statements
Rule 8     statements -> statement
Rule 9     statement -> assignment SEMICOLON
Rule 10    statement -> reassignment SEMICOLON
Rule 11    statement -> BREAK SEMICOLON
Rule 12    statement -> CONTINUE SEMICOLON
Rule 13    statement -> RETURN expression SEMICOLON
Rule 14    statement -> expression SEMICOLON
Rule 15    statement -> CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN SEMICOLON
Rule 16    statement -> functioncall SEMICOLON
Rule 17    statement -> if
Rule 18    statement -> ifelse
Rule 19    statement -> whileloop
Rule 20    statement -> funcdecl
Rule 21    assignment -> VAR assignlist
Rule 22    assignment -> LEFTPAREN assignment RIGHTPAREN
Rule 23    assignlist -> ID EQ expression COMMA assignlist
Rule 24    assignlist -> ID COMMA assignlist
Rule 25    assignlist -> arraydecl COMMA assignlist
Rule 26    assignlist -> ID EQ expression
Rule 27    assignlist -> ID
Rule 28    assignlist -> arraydecl
Rule 29    reassignment -> ID EQ expression
Rule 30    reassignment -> ID PLUSEQ expression
Rule 31    reassignment -> ID MINUSEQ expression
Rule 32    reassignment -> ID INTOEQ expression
Rule 33    reassignment -> ID DIVEQ expression
Rule 34    reassignment -> ID INCR
Rule 35    reassignment -> ID DECR
Rule 36    reassignment -> ID LSHIFTEQ expression
Rule 37    reassignment -> ID RSHIFTEQ expression
Rule 38    reassignment -> ID URSHIFTEQ expression
Rule 39    reassignment -> ID ANDEQ expression
Rule 40    reassignment -> ID OREQ expression
Rule 41    reassignment -> ID XOREQ expression
Rule 42    reassignment -> ID MODEQ expression
Rule 43    reassignment -> arraydecl
Rule 44    reassignment -> LEFTPAREN reassignment RIGHTPAREN
Rule 45    arraydecl -> ID EQ LEFTBRACKET arrayList RIGHTBRACKET
Rule 46    arrayList -> expression COMMA arrayList
Rule 47    arrayList -> arraydecl COMMA arrayList
Rule 48    arrayList -> arraydecl
Rule 49    arrayList -> expression
Rule 50    arrayList -> <empty>
Rule 51    expression -> EVAL LEFTPAREN statements RIGHTPAREN
Rule 52    expression -> EVAL LEFTPAREN block RIGHTPAREN
Rule 53    expression -> expression PLUS expression
Rule 54    expression -> expression MINUS expression
Rule 55    expression -> expression INTO expression
Rule 56    expression -> expression DIVIDE expression
Rule 57    expression -> expression MOD expression
Rule 58    expression -> expression EXPO expression
Rule 59    expression -> LEFTPAREN expression RIGHTPAREN
Rule 60    expression -> NOT expression
Rule 61    expression -> expression BINAND expression
Rule 62    expression -> expression BINOR expression
Rule 63    expression -> expression BINXOR expression
Rule 64    expression -> BINNOT expression
Rule 65    expression -> expression LT expression
Rule 66    expression -> expression GT expression
Rule 67    expression -> expression DOUBLEEQ expression
Rule 68    expression -> expression NOTEQUAL expression
Rule 69    expression -> expression LTE expression
Rule 70    expression -> expression GTE expression
Rule 71    expression -> expression STREQUAL expression
Rule 72    expression -> expression STRNEQUAL expression
Rule 73    expression -> expression AND expression
Rule 74    expression -> expression OR expression
Rule 75    expression -> expression LSHIFT expression
Rule 76    expression -> expression RSHIFT expression
Rule 77    expression -> expression URSHIFT expression
Rule 78    expression -> basicTypes
Rule 79    expression -> functioncall
Rule 80    expression -> arrayCall
Rule 81    expression -> TYPEOF expression
Rule 82    arrayCall -> ID LEFTBRACKET expression RIGHTBRACKET
Rule 83    basicTypes -> NUMBER
Rule 84    basicTypes -> STRING
Rule 85    basicTypes -> ID
Rule 86    basicTypes -> UNDEFINED
Rule 87    functioncall -> ID LEFTPAREN argList RIGHTPAREN
Rule 88    argList -> expression
Rule 89    argList -> expression COMMA argList
Rule 90    argList -> <empty>
Rule 91    if -> IF expression cblock
Rule 92    ifelse -> IF expression cblock ELSE cblock
Rule 93    ifelse -> IF expression cblock ELSE if
Rule 94    ifelse -> IF expression cblock ELSE ifelse
Rule 95    cblock -> block
Rule 96    cblock -> statement
Rule 97    whileloop -> WHILE LEFTPAREN expression RIGHTPAREN cblock
Rule 98    forloop -> FOR LEFTPAREN ID SEMICOLON cblock
Rule 99    initialization -> assignment SEMICOLON initialization
Rule 100   initialization -> reassignment SEMICOLON initialization
Rule 101   initialization -> assignment
Rule 102   initialization -> reassignment
Rule 103   increment -> reassignment SEMICOLON increment
Rule 104   increment -> reassignment
Rule 105   funcdecl -> FUNCTION ID LEFTPAREN argList RIGHTPAREN cblock
Rule 106   funcdecl -> VAR ID EQ FUNCTION LEFTPAREN argList RIGHTPAREN cblock SEMICOLON
Rule 107   statement -> assignment
Rule 108   statement -> reassignment
Rule 109   statement -> BREAK
Rule 110   statement -> CONTINUE
Rule 111   statement -> expression
Rule 112   statement -> CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN
Rule 113   statement -> functioncall

Terminals, with rules where they appear

ALERT                : 
AND                  : 73
ANDEQ                : 39
BCOMMENT             : 
BINAND               : 61
BINNOT               : 64
BINOR                : 62
BINXOR               : 63
BREAK                : 11 109
CASE                 : 
CATCH                : 
CLASS                : 
COLON                : 
COMMA                : 23 24 25 46 47 89
CONDOP               : 
CONSOLE              : 15 112
CONST                : 
CONTINUE             : 12 110
DEBUGGER             : 
DECR                 : 35
DEFAULT              : 
DELETE               : 
DIVEQ                : 33
DIVIDE               : 56
DO                   : 
DOT                  : 15 112
DOUBLEEQ             : 67
ELSE                 : 92 93 94
EQ                   : 23 26 29 45 106
EVAL                 : 51 52
EXPO                 : 58
EXPORT               : 
EXTENDS              : 
FINALLY              : 
FOR                  : 98
FUNCTION             : 105 106
GETP                 : 
GETPROP              : 
GT                   : 66
GTE                  : 70
ID                   : 23 24 26 27 29 30 31 32 33 34 35 36 37 38 39 40 41 42 45 82 85 87 98 105 106
IF                   : 91 92 93 94
IMPORT               : 
IN                   : 
INCR                 : 34
INSTANCEOF           : 
INTO                 : 55
INTOEQ               : 32
LCOMMENT             : 
LEFTBRACE            : 4 5
LEFTBRACKET          : 45 82
LEFTPAREN            : 15 22 44 51 52 59 87 97 98 105 106 112
LOG                  : 15 112
LSHIFT               : 75
LSHIFTEQ             : 36
LT                   : 65
LTE                  : 69
MINUS                : 54
MINUSEQ              : 31
MOD                  : 57
MODEQ                : 42
NEW                  : 
NOT                  : 60
NOTEQUAL             : 68
NUMBER               : 83
OR                   : 74
OREQ                 : 40
PLUS                 : 53
PLUSEQ               : 30
REGEX                : 
RETURN               : 13
RIGHTBRACE           : 4 5
RIGHTBRACKET         : 45 82
RIGHTPAREN           : 15 22 44 51 52 59 87 97 105 106 112
RSHIFT               : 76
RSHIFTEQ             : 37
SEMICOLON            : 9 10 11 12 13 14 15 16 98 99 100 103 106
SETP                 : 
SETPROP              : 
STREQUAL             : 71
STRING               : 84
STRNEQUAL            : 72
SUPER                : 
SWITCH               : 
THIS                 : 
THROW                : 
TRY                  : 
TYPEOF               : 81
UNDEFINED            : 86
URSHIFT              : 77
URSHIFTEQ            : 38
VAR                  : 21 106
VOID                 : 
WHILE                : 97
WITH                 : 
XOREQ                : 41
YIELD                : 
error                : 

Nonterminals, with rules where they appear

argList              : 87 89 105 106
arrayCall            : 80
arrayList            : 45 46 47
arraydecl            : 25 28 43 47 48
assignlist           : 21 23 24 25
assignment           : 9 22 99 101 107
basicTypes           : 78
block                : 1 52 95
cblock               : 91 92 92 93 94 97 98 105 106
expression           : 13 14 15 23 26 29 30 31 32 33 36 37 38 39 40 41 42 46 49 53 53 54 54 55 55 56 56 57 57 58 58 59 60 61 61 62 62 63 63 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 81 82 88 89 91 92 93 94 97 111 112
forloop              : 6
funcdecl             : 20
functioncall         : 16 79 113
if                   : 17 93
ifelse               : 18 94
increment            : 103
initialization       : 99 100
loop                 : 3
reassignment         : 10 44 100 102 103 104 108
start                : 0
statement            : 7 8 96
statements           : 2 4 7 51
whileloop            : 19

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . block
    (2) start -> . statements
    (3) start -> . loop
    (4) block -> . LEFTBRACE statements RIGHTBRACE
    (5) block -> . LEFTBRACE RIGHTBRACE
    (7) statements -> . statement statements
    (8) statements -> . statement
    (6) loop -> . forloop
    (9) statement -> . assignment SEMICOLON
    (10) statement -> . reassignment SEMICOLON
    (11) statement -> . BREAK SEMICOLON
    (12) statement -> . CONTINUE SEMICOLON
    (13) statement -> . RETURN expression SEMICOLON
    (14) statement -> . expression SEMICOLON
    (15) statement -> . CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN SEMICOLON
    (16) statement -> . functioncall SEMICOLON
    (17) statement -> . if
    (18) statement -> . ifelse
    (19) statement -> . whileloop
    (20) statement -> . funcdecl
    (107) statement -> . assignment
    (108) statement -> . reassignment
    (109) statement -> . BREAK
    (110) statement -> . CONTINUE
    (111) statement -> . expression
    (112) statement -> . CONSOLE DOT LOG LEFTPAREN expression RIGHTPAREN
    (113) statement -> . functioncall
    (98) forloop -> . FOR LEFTPAREN ID SEMICOLON cblock
    (21) assignment -> . VAR assignlist
    (22) assignment -> . LEFTPAREN assignment RIGHTPAREN
    (29) reassignment -> . ID EQ expression
    (30) reassignment -> . ID PLUSEQ expression
    (31) reassignment -> . ID MINUSEQ expression
    (32) reassignment -> . ID INTOEQ expression
    (33) reassignment -> . ID DIVEQ expression
    (34) reassignment -> . ID INCR
    (35) reassignment -> . ID DECR
    (36) reassignment -> . ID LSHIFTEQ expression
    (37) reassignment -> . ID RSHIFTEQ expression
    (38) reassignment -> . ID URSHIFTEQ expression
    (39) reassignment -> . ID ANDEQ expression
    (40) reassignment -> . ID OREQ expression
    (41) reassignment -> . ID XOREQ expression
    (42) reassignment -> . ID MODEQ expression
    (43) reassignment -> . arraydecl
    (44) reassignment -> . LEFTPAREN reassignment RIGHTPAREN
    (51) expression -> . EVAL LEFTPAREN statements RIGHTPAREN
    (52) expression -> . EVAL LEFTPAREN block RIGHTPAREN
    (53) expression -> . expression PLUS expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression INTO expression
    (56) expression -> . expression DIVIDE expression
    (57) expression -> . expression MOD expression
    (58) expression -> . expression EXPO expression
    (59) expression -> . LEFTPAREN expression RIGHTPAREN
    (60) expression -> . NOT expression
    (61) expression -> . expression BINAND expression
    (62) expression -> . expression BINOR expression
    (63) expression -> . expression BINXOR expression
    (64) expression -> . BINNOT expression
    (65) expression -> . expression LT expression
    (66) expression -> . expression GT expression
    (67) expression -> . expression DOUBLEEQ expression
    (68) expression -> . expression NOTEQUAL expression
    (69) expression -> . expression LTE expression
    (70) expression -> . expression GTE expression
    (71) expression -> . expression STREQUAL expression
    (72) expression -> . expression STRNEQUAL expression
    (73) expression -> . expression AND expression
    (74) expression -> . expression OR expression
    (75) expression -> . expression LSHIFT expression
    (76) expression -> . expression RSHIFT expression
    (77) expression -> . expression URSHIFT expression
    (78) expression -> . basicTypes
    (79) expression -> . functioncall
    (80) expression -> . arrayCall
    (81) expression -> . TYPEOF expression
    (87) functioncall -> . ID LEFTPAREN argList RIGHTPAREN
    (91) if -> . IF expression cblock
    (92) ifelse -> . IF expression cblock ELSE cblock
    (93) ifelse -> . IF expression cblock ELSE if
    (94) ifelse -> . IF expression cblock ELSE ifelse
    (97) whileloop -> . WHILE LEFTPAREN expression RIGHTPAREN cblock
    (105) funcdecl -> . FUNCTION ID LEFTPAREN argList RIGHTPAREN cblock
    (106) funcdecl -> . VAR ID EQ FUNCTION LEFTPAREN argList RIGHTPAREN cblock SEMICOLON
    (45) arraydecl -> . ID EQ LEFTBRACKET arrayList RIGHTBRACKET
    (83) basicTypes -> . NUMBER
    (84) basicTypes -> . STRING
    (85) basicTypes -> . ID
    (86) basicTypes -> . UNDEFINED
    (82) arrayCall -> . ID LEFTBRACKET expression RIGHTBRACKET

    LEFTBRACE       shift and go to state 25
    BREAK           shift and go to state 28
    CONTINUE        shift and go to state 29
    RETURN          shift and go to state 5
    CONSOLE         shift and go to state 15
    FOR             shift and go to state 16
    VAR             shift and go to state 23
    LEFTPAREN       shift and go to state 18
    ID              shift and go to state 24
    EVAL            shift and go to state 21
    NOT             shift and go to state 33
    BINNOT          shift and go to state 26
    TYPEOF          shift and go to state 20
    IF              shift and go to state 3
    WHILE           shift and go to state 4
    FUNCTION        shift and go to state 32
    NUMBER          shift and go to state 2
    STRING          shift and go to state 12
    UNDEFINED       shift and go to state 22

    forloop                        shift and go to state 7
    whileloop                      shift and go to state 14
    statements                     shift and go to state 1
    assignment                     shift and go to state 17
    funcdecl                       shift and go to state 27
    basicTypes                     shift and go to state 34
    reassignment                   shift and go to state 8
    start                          shift and go to state 9
    arrayCall                      shift and go to state 19
    functioncall                   shift and go to state 30
    block                          shift and go to state 36
    statement                      shift and go to state 11
    ifelse                         shift and go to state 10
    arraydecl                      shift and go to state 13
    expression                     shift and go to state 35
    loop                           shift and go to state 31
    if                             shift and go to state 6

state 1

    (2) start -> statements .

    $end            reduce using rule 2 (start -> statements .)


state 2

    (83) basicTypes -> NUMBER .

    RIGHTPAREN      reduce using rule 83 (basicTypes -> NUMBER .)
    PLUS            reduce using rule 83 (basicTypes -> NUMBER .)
    MINUS           reduce using rule 83 (basicTypes -> NUMBER .)
    INTO            reduce using rule 83 (basicTypes -> NUMBER .)
    DIVIDE          reduce using rule 83 (basicTypes -> NUMBER .)
    MOD             reduce using rule 83 (basicTypes -> NUMBER .)
    EXPO            reduce using rule 83 (basicTypes -> NUMBER .)
    BINAND          reduce using rule 83 (basicTypes -> NUMBER .)
    BINOR           reduce using rule 83 (basicTypes -> NUMBER .)
    BINXOR          reduce using rule 83 (basicTypes -> NUMBER .)
    LT              reduce using rule 83 (basicTypes -> NUMBER .)
    GT              reduce using rule 83 (basicTypes -> NUMBER .)
    DOUBLEEQ        reduce using rule 83 (basicTypes -> NUMBER .)
    NOTEQUAL        reduce using rule 83 (basicTypes -> NUMBER .)
    LTE             reduce using rule 83 (basicTypes -> NUMBER .)
    GTE             reduce using rule 83 (basicTypes -> NUMBER .)
    STREQUAL        reduce using rule 83 (basicTypes -> NUMBER .)
    STRNEQUAL       reduce using rule 83 (basicTypes -> NUMBER .)
    AND             reduce using rule 83 (basicTypes -> NUMBER .)
    OR              reduce using rule 83 (basicTypes -> NUMBER .)
    LSHIFT          reduce using rule 83 (basicTypes -> NUMBER .)
    RSHIFT          reduce using rule 83 (basicTypes -> NUMBER .)
    URSHIFT         reduce using rule 83 (basicTypes -> NUMBER .)
    SEMICOLON       reduce using rule 83 (basicTypes -> NUMBER .)
    BREAK           reduce using rule 83 (basicTypes -> NUMBER .)
    CONTINUE        reduce using rule 83 (basicTypes -> NUMBER .)
    RETURN          reduce using rule 83 (basicTypes -> NUMBER .)
    CONSOLE         reduce using rule 83 (basicTypes -> NUMBER .)
    VAR             reduce using rule 83 (basicTypes -> NUMBER .)
    LEFTPAREN       reduce using rule 83 (basicTypes -> NUMBER .)
    ID              reduce using rule 83 (basicTypes -> NUMBER .)
    EVAL            reduce using rule 83 (basicTypes -> NUMBER .)
    NOT             reduce using rule 83 (basicTypes -> NUMBER .)
    BINNOT          reduce using rule 83 (basicTypes -> NUMBER .)
    TYPEOF          reduce using rule 83 (basicTypes -> NUMBER .)
    IF              reduce using rule 83 (basicTypes -> NUMBER .)
    WHILE           reduce using rule 83 (basicTypes -> NUMBER .)
    FUNCTION        reduce using rule 83 (basicTypes -> NUMBER .)
    NUMBER          reduce using rule 83 (basicTypes -> NUMBER .)
    STRING          reduce using rule 83 (basicTypes -> NUMBER .)
    UNDEFINED       reduce using rule 83 (basicTypes -> NUMBER .)
    $end            reduce using rule 83 (basicTypes -> NUMBER .)
    RIGHTBRACE      reduce using rule 83 (basicTypes -> NUMBER .)
    ELSE            reduce using rule 83 (basicTypes -> NUMBER .)
    LEFTBRACE       reduce using rule 83 (basicTypes -> NUMBER .)
    RIGHTBRACKET    reduce using rule 83 (basicTypes -> NUMBER .)
    COMMA           reduce using rule 83 (basicTypes -> NUMBER .)


state 3

    (91) if -> IF . expression cblock
    (92) ifelse -> IF . expression cblock ELSE cblock
    (93) ifelse -> IF . expression cblock ELSE if
    (94) ifelse -> IF . expression cblock ELSE ifelse
    (51) expression -> . EVAL LEFTPAREN statements RIGHTPAREN
    (52) expression -> . EVAL LEFTPAREN block RIGHTPAREN
    (53) expression -> . expression PLUS expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression INTO expression
    (56) expression -> . expression DIVIDE expression
    (57) expression -> . expression MOD expression
    (58) expression -> . expression EXPO expression
    (59) expression -> . LEFTPAREN expression RIGHTPAREN
    (60) expression -> . NOT expression
    (61) expression -> . expression BINAND expression
    (62) expression -> . expression BINOR expression
    (63) expression -> . expression BINXOR expression
    (64) expression -> . BINNOT expression
    (65) expression -> . expression LT expression
    (66) expression -> . expression GT expression
    (67) expression -> . expression DOUBLEEQ expression
    (68) expression -> . expression NOTEQUAL expression
    (69) expression -> . expression LTE expression
    (70) expression -> . expression GTE expression
    (71) expression -> . expression STREQUAL expression
    (72) expression -> . expression STRNEQUAL expression
    (73) expression -> . expression AND expression
    (74) expression -> . expression OR expression
    (75) expression -> . expression LSHIFT expression
    (76) expression -> . expression RSHIFT expression
    (77) expression -> . expression URSHIFT expression
    (78) expression -> . basicTypes
    (79) expression -> . functioncall
    (80) expression -> . arrayCall
    (81) expression -> . TYPEOF expression
    (83) basicTypes -> . NUMBER
    (84) basicTypes -> . STRING
    (85) basicTypes -> . ID
    (86) basicTypes -> . UNDEFINED
    (87) functioncall -> . ID LEFTPAREN argList RIGHTPAREN
    (82) arrayCall -> . ID LEFTBRACKET expression RIGHTBRACKET

    EVAL            shift and go to state 21
    LEFTPAREN       shift and go to state 37
    NOT             shift and go to state 33
    BINNOT          shift and go to state 26
    TYPEOF          shift and go to state 20
    NUMBER          shift and go to state 2
    STRING          shift and go to state 12
    ID              shift and go to state 38
    UNDEFINED       shift and go to state 22

    expression                     shift and go to state 40
    arrayCall                      shift and go to state 19
    functioncall                   shift and go to state 39
    basicTypes                     shift and go to state 34

state 4

    (97) whileloop -> WHILE . LEFTPAREN expression RIGHTPAREN cblock

    LEFTPAREN       shift and go to state 41


state 5
